name:                deploy
version:             0.1.1
-- synopsis:
-- description:
homepage:            https://github.com/epicallan/deploy#readme
license:             BSD3
license-file:        LICENSE
author:              Lukwago Allan
maintainer:          epicallan.al@gmail.com
copyright:           2017 Lukwago Allan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Deploy.API, Deploy.Types
                    ,  Deploy.Initiate.Core
  build-depends:       base >= 4.7 && < 5
                    ,  text >=1.2.2.2
                    ,  bytestring >=0.10.8.1
                    ,  aeson
                    ,  http-conduit
                    ,  http-types
                    ,  safe-exceptions
                    ,  bytestring
                    ,  directory
                    ,  servant-multipart >= 0.11
                    ,  http-client >= 0.5.7.0
                    ,  process >= 1.4.3.0
                    ,  transformers >=0.5.2.0
                    ,  network >= 2.6.3.2 
                    ,  HaskellNet >= 0.5.1
                    ,  servant-server
                    ,  wai
                    ,  warp
                    ,  mtl
  default-language:    Haskell2010

executable deploy-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , deploy
                     , text >=1.2.2.2
  default-language:    Haskell2010

test-suite deploy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , deploy
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/epicallan/deploy
